[package]
name = "opencv_otsu_threshold"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A backend service for image processing using Otsu thresholding"
license = "MIT"

[dependencies]
opencv = "0.95.0"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.21"
